// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for a multi-key sum-distinct query with a partially overlapping selection 1`] = `
"WITH
  dd_orders_total_payment_by_method_per_order AS (
    SELECT
      "orders_order_id",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "orders_total_payment_by_method_per_order"
    FROM
      (
        SELECT
          "orders".order_id AS "orders_order_id",
          "orders".amount AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "orders".order_id,
              "orders".payment_method
            ORDER BY
              "orders".amount
          ) AS __dd_rn
        FROM
          "db"."schema"."orders" AS "orders"
      ) __dd_sub
    GROUP BY
      1
  ),
  dd_base AS (
    SELECT
      "orders".order_id AS "orders_order_id"
    FROM
      "db"."schema"."orders" AS "orders"
    GROUP BY
      1
  )
SELECT
  dd_base.*,
  dd_orders_total_payment_by_method_per_order."orders_total_payment_by_method_per_order" AS "orders_total_payment_by_method_per_order"
FROM
  dd_base
  INNER JOIN dd_orders_total_payment_by_method_per_order ON (
    dd_base."orders_order_id" = dd_orders_total_payment_by_method_per_order."orders_order_id"
    OR (
      dd_base."orders_order_id" IS NULL
      AND dd_orders_total_payment_by_method_per_order."orders_order_id" IS NULL
    )
  )
ORDER BY
  "orders_total_payment_by_method_per_order" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for a multi-key sum-distinct query with all distinct keys selected 1`] = `
"WITH
  dd_orders_total_payment_by_method_per_order AS (
    SELECT
      "orders_order_id",
      "orders_payment_method",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "orders_total_payment_by_method_per_order"
    FROM
      (
        SELECT
          "orders".order_id AS "orders_order_id",
          "orders".payment_method AS "orders_payment_method",
          "orders".amount AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "orders".order_id,
              "orders".payment_method
            ORDER BY
              "orders".amount
          ) AS __dd_rn
        FROM
          "db"."schema"."orders" AS "orders"
      ) __dd_sub
    GROUP BY
      1,
      2
  ),
  dd_base AS (
    SELECT
      "orders".order_id AS "orders_order_id",
      "orders".payment_method AS "orders_payment_method"
    FROM
      "db"."schema"."orders" AS "orders"
    GROUP BY
      1,
      2
  )
SELECT
  dd_base.*,
  dd_orders_total_payment_by_method_per_order."orders_total_payment_by_method_per_order" AS "orders_total_payment_by_method_per_order"
FROM
  dd_base
  INNER JOIN dd_orders_total_payment_by_method_per_order ON (
    dd_base."orders_order_id" = dd_orders_total_payment_by_method_per_order."orders_order_id"
    OR (
      dd_base."orders_order_id" IS NULL
      AND dd_orders_total_payment_by_method_per_order."orders_order_id" IS NULL
    )
  )
  AND (
    dd_base."orders_payment_method" = dd_orders_total_payment_by_method_per_order."orders_payment_method"
    OR (
      dd_base."orders_payment_method" IS NULL
      AND dd_orders_total_payment_by_method_per_order."orders_payment_method" IS NULL
    )
  )
ORDER BY
  "orders_total_payment_by_method_per_order" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for a sum-distinct query where the selected dimension is the distinct key 1`] = `
"WITH
  dd_orders_total_revenue AS (
    SELECT
      "orders_line_item_id",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "orders_total_revenue"
    FROM
      (
        SELECT
          "orders".line_item_id AS "orders_line_item_id",
          "orders".amount AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "orders".line_item_id
            ORDER BY
              "orders".amount
          ) AS __dd_rn
        FROM
          "db"."schema"."orders" AS "orders"
      ) __dd_sub
    GROUP BY
      1
  ),
  dd_base AS (
    SELECT
      "orders".line_item_id AS "orders_line_item_id"
    FROM
      "db"."schema"."orders" AS "orders"
    GROUP BY
      1
  )
SELECT
  dd_base.*,
  dd_orders_total_revenue."orders_total_revenue" AS "orders_total_revenue"
FROM
  dd_base
  INNER JOIN dd_orders_total_revenue ON (
    dd_base."orders_line_item_id" = dd_orders_total_revenue."orders_line_item_id"
    OR (
      dd_base."orders_line_item_id" IS NULL
      AND dd_orders_total_revenue."orders_line_item_id" IS NULL
    )
  )
ORDER BY
  "orders_total_revenue" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for a sum-distinct query with dimensions not in distinct_keys 1`] = `
"WITH
  dd_orders_total_revenue AS (
    SELECT
      "orders_payment_method",
      "orders_status",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "orders_total_revenue"
    FROM
      (
        SELECT
          "orders".payment_method AS "orders_payment_method",
          "orders".status AS "orders_status",
          "orders".amount AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "orders".line_item_id,
              "orders".payment_method,
              "orders".status
            ORDER BY
              "orders".amount
          ) AS __dd_rn
        FROM
          "db"."schema"."orders" AS "orders"
      ) __dd_sub
    GROUP BY
      1,
      2
  ),
  dd_base AS (
    SELECT
      "orders".payment_method AS "orders_payment_method",
      "orders".status AS "orders_status"
    FROM
      "db"."schema"."orders" AS "orders"
    GROUP BY
      1,
      2
  )
SELECT
  dd_base.*,
  dd_orders_total_revenue."orders_total_revenue" AS "orders_total_revenue"
FROM
  dd_base
  INNER JOIN dd_orders_total_revenue ON (
    dd_base."orders_payment_method" = dd_orders_total_revenue."orders_payment_method"
    OR (
      dd_base."orders_payment_method" IS NULL
      AND dd_orders_total_revenue."orders_payment_method" IS NULL
    )
  )
  AND (
    dd_base."orders_status" = dd_orders_total_revenue."orders_status"
    OR (
      dd_base."orders_status" IS NULL
      AND dd_orders_total_revenue."orders_status" IS NULL
    )
  )
ORDER BY
  "orders_total_revenue" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for a sum-distinct query without dimensions 1`] = `
"WITH
  dd_orders_total_revenue AS (
    SELECT
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "orders_total_revenue"
    FROM
      (
        SELECT
          "orders".amount AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "orders".line_item_id
            ORDER BY
              "orders".amount
          ) AS __dd_rn
        FROM
          "db"."schema"."orders" AS "orders"
      ) __dd_sub
  )
SELECT
  dd_orders_total_revenue."orders_total_revenue" AS "orders_total_revenue"
FROM
  dd_orders_total_revenue
ORDER BY
  "orders_total_revenue" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for a type:number metric that transitively references sum_distinct metrics through another type:number wrapper 1`] = `
"WITH
  dd_transfers_total_corridor_transfers AS (
    SELECT
      "transfers_date",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "transfers_total_corridor_transfers"
    FROM
      (
        SELECT
          "transfers".date AS "transfers_date",
          "transfers".total_daily_corridor_transfers AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "transfers".client_id,
              "transfers".date
            ORDER BY
              "transfers".total_daily_corridor_transfers
          ) AS __dd_rn
        FROM
          "db"."schema"."transfers" AS "transfers"
      ) __dd_sub
    GROUP BY
      1
  ),
  dd_transfers_total_residual_transfers AS (
    SELECT
      "transfers_date",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "transfers_total_residual_transfers"
    FROM
      (
        SELECT
          "transfers".date AS "transfers_date",
          "transfers".total_daily_residual_transfers AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "transfers".client_id,
              "transfers".date
            ORDER BY
              "transfers".total_daily_residual_transfers
          ) AS __dd_rn
        FROM
          "db"."schema"."transfers" AS "transfers"
      ) __dd_sub
    GROUP BY
      1
  ),
  dd_base AS (
    SELECT
      "transfers".date AS "transfers_date",
      COUNT(DISTINCT "transfers".contact_id) AS "transfers_total_inbound_contacts"
    FROM
      "db"."schema"."transfers" AS "transfers"
    GROUP BY
      1
  )
SELECT
  dd_base.*,
  dd_transfers_total_corridor_transfers."transfers_total_corridor_transfers" AS "transfers_total_corridor_transfers",
  dd_transfers_total_residual_transfers."transfers_total_residual_transfers" AS "transfers_total_residual_transfers",
  dd_transfers_total_corridor_transfers."transfers_total_corridor_transfers" + dd_transfers_total_residual_transfers."transfers_total_residual_transfers" AS "transfers_total_transfers",
  dd_base."transfers_total_inbound_contacts" / nullif(
    (
      dd_transfers_total_corridor_transfers."transfers_total_corridor_transfers" + dd_transfers_total_residual_transfers."transfers_total_residual_transfers"
    ),
    0
  ) AS "transfers_transfer_inbound_contact_rate"
FROM
  dd_base
  INNER JOIN dd_transfers_total_corridor_transfers ON (
    dd_base."transfers_date" = dd_transfers_total_corridor_transfers."transfers_date"
    OR (
      dd_base."transfers_date" IS NULL
      AND dd_transfers_total_corridor_transfers."transfers_date" IS NULL
    )
  )
  INNER JOIN dd_transfers_total_residual_transfers ON (
    dd_base."transfers_date" = dd_transfers_total_residual_transfers."transfers_date"
    OR (
      dd_base."transfers_date" IS NULL
      AND dd_transfers_total_residual_transfers."transfers_date" IS NULL
    )
  )
ORDER BY
  "transfers_date"
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for a type:number metric that wraps two sum_distinct metrics 1`] = `
"WITH
  dd_transfers_total_corridor_transfers AS (
    SELECT
      "transfers_date",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "transfers_total_corridor_transfers"
    FROM
      (
        SELECT
          "transfers".date AS "transfers_date",
          "transfers".total_daily_corridor_transfers AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "transfers".client_id,
              "transfers".date
            ORDER BY
              "transfers".total_daily_corridor_transfers
          ) AS __dd_rn
        FROM
          "db"."schema"."transfers" AS "transfers"
      ) __dd_sub
    GROUP BY
      1
  ),
  dd_transfers_total_residual_transfers AS (
    SELECT
      "transfers_date",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "transfers_total_residual_transfers"
    FROM
      (
        SELECT
          "transfers".date AS "transfers_date",
          "transfers".total_daily_residual_transfers AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "transfers".client_id,
              "transfers".date
            ORDER BY
              "transfers".total_daily_residual_transfers
          ) AS __dd_rn
        FROM
          "db"."schema"."transfers" AS "transfers"
      ) __dd_sub
    GROUP BY
      1
  ),
  dd_base AS (
    SELECT
      "transfers".date AS "transfers_date"
    FROM
      "db"."schema"."transfers" AS "transfers"
    GROUP BY
      1
  )
SELECT
  dd_base.*,
  dd_transfers_total_corridor_transfers."transfers_total_corridor_transfers" AS "transfers_total_corridor_transfers",
  dd_transfers_total_residual_transfers."transfers_total_residual_transfers" AS "transfers_total_residual_transfers",
  dd_transfers_total_corridor_transfers."transfers_total_corridor_transfers" + dd_transfers_total_residual_transfers."transfers_total_residual_transfers" AS "transfers_total_transfers"
FROM
  dd_base
  INNER JOIN dd_transfers_total_corridor_transfers ON (
    dd_base."transfers_date" = dd_transfers_total_corridor_transfers."transfers_date"
    OR (
      dd_base."transfers_date" IS NULL
      AND dd_transfers_total_corridor_transfers."transfers_date" IS NULL
    )
  )
  INNER JOIN dd_transfers_total_residual_transfers ON (
    dd_base."transfers_date" = dd_transfers_total_residual_transfers."transfers_date"
    OR (
      dd_base."transfers_date" IS NULL
      AND dd_transfers_total_residual_transfers."transfers_date" IS NULL
    )
  )
ORDER BY
  "transfers_date"
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for an average-distinct query with dimensions not in distinct_keys 1`] = `
"WITH
  dd_orders_avg_shipping_cost AS (
    SELECT
      "orders_payment_method",
      CAST(
        SUM(
          CASE
            WHEN __dd_rn = 1 THEN __dd_val
            ELSE NULL
          END
        ) AS FLOAT
      ) / CAST(
        NULLIF(
          COUNT(
            CASE
              WHEN __dd_rn = 1 THEN __dd_val
            END
          ),
          0
        ) AS FLOAT
      ) AS "orders_avg_shipping_cost"
    FROM
      (
        SELECT
          "orders".payment_method AS "orders_payment_method",
          "orders".shipping_cost AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "orders".line_item_id,
              "orders".payment_method
            ORDER BY
              "orders".shipping_cost
          ) AS __dd_rn
        FROM
          "db"."schema"."orders" AS "orders"
      ) __dd_sub
    GROUP BY
      1
  ),
  dd_base AS (
    SELECT
      "orders".payment_method AS "orders_payment_method"
    FROM
      "db"."schema"."orders" AS "orders"
    GROUP BY
      1
  )
SELECT
  dd_base.*,
  dd_orders_avg_shipping_cost."orders_avg_shipping_cost" AS "orders_avg_shipping_cost"
FROM
  dd_base
  INNER JOIN dd_orders_avg_shipping_cost ON (
    dd_base."orders_payment_method" = dd_orders_avg_shipping_cost."orders_payment_method"
    OR (
      dd_base."orders_payment_method" IS NULL
      AND dd_orders_avg_shipping_cost."orders_payment_method" IS NULL
    )
  )
ORDER BY
  "orders_avg_shipping_cost" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for an average-distinct query without dimensions 1`] = `
"WITH
  dd_orders_avg_shipping_cost AS (
    SELECT
      CAST(
        SUM(
          CASE
            WHEN __dd_rn = 1 THEN __dd_val
            ELSE NULL
          END
        ) AS FLOAT
      ) / CAST(
        NULLIF(
          COUNT(
            CASE
              WHEN __dd_rn = 1 THEN __dd_val
            END
          ),
          0
        ) AS FLOAT
      ) AS "orders_avg_shipping_cost"
    FROM
      (
        SELECT
          "orders".shipping_cost AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "orders".line_item_id
            ORDER BY
              "orders".shipping_cost
          ) AS __dd_rn
        FROM
          "db"."schema"."orders" AS "orders"
      ) __dd_sub
  )
SELECT
  dd_orders_avg_shipping_cost."orders_avg_shipping_cost" AS "orders_avg_shipping_cost"
FROM
  dd_orders_avg_shipping_cost
ORDER BY
  "orders_avg_shipping_cost" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: distinct queries matches snapshot for both wrapper and transitive-rate metrics selected together 1`] = `
"WITH
  dd_transfers_total_corridor_transfers AS (
    SELECT
      "transfers_date",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "transfers_total_corridor_transfers"
    FROM
      (
        SELECT
          "transfers".date AS "transfers_date",
          "transfers".total_daily_corridor_transfers AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "transfers".client_id,
              "transfers".date
            ORDER BY
              "transfers".total_daily_corridor_transfers
          ) AS __dd_rn
        FROM
          "db"."schema"."transfers" AS "transfers"
      ) __dd_sub
    GROUP BY
      1
  ),
  dd_transfers_total_residual_transfers AS (
    SELECT
      "transfers_date",
      SUM(
        CASE
          WHEN __dd_rn = 1 THEN __dd_val
          ELSE NULL
        END
      ) AS "transfers_total_residual_transfers"
    FROM
      (
        SELECT
          "transfers".date AS "transfers_date",
          "transfers".total_daily_residual_transfers AS __dd_val,
          ROW_NUMBER() OVER (
            PARTITION BY
              "transfers".client_id,
              "transfers".date
            ORDER BY
              "transfers".total_daily_residual_transfers
          ) AS __dd_rn
        FROM
          "db"."schema"."transfers" AS "transfers"
      ) __dd_sub
    GROUP BY
      1
  ),
  dd_base AS (
    SELECT
      "transfers".date AS "transfers_date",
      COUNT(DISTINCT "transfers".contact_id) AS "transfers_total_inbound_contacts"
    FROM
      "db"."schema"."transfers" AS "transfers"
    GROUP BY
      1
  )
SELECT
  dd_base.*,
  dd_transfers_total_corridor_transfers."transfers_total_corridor_transfers" AS "transfers_total_corridor_transfers",
  dd_transfers_total_residual_transfers."transfers_total_residual_transfers" AS "transfers_total_residual_transfers",
  dd_transfers_total_corridor_transfers."transfers_total_corridor_transfers" + dd_transfers_total_residual_transfers."transfers_total_residual_transfers" AS "transfers_total_transfers",
  dd_base."transfers_total_inbound_contacts" / nullif(
    (
      dd_transfers_total_corridor_transfers."transfers_total_corridor_transfers" + dd_transfers_total_residual_transfers."transfers_total_residual_transfers"
    ),
    0
  ) AS "transfers_transfer_inbound_contact_rate"
FROM
  dd_base
  INNER JOIN dd_transfers_total_corridor_transfers ON (
    dd_base."transfers_date" = dd_transfers_total_corridor_transfers."transfers_date"
    OR (
      dd_base."transfers_date" IS NULL
      AND dd_transfers_total_corridor_transfers."transfers_date" IS NULL
    )
  )
  INNER JOIN dd_transfers_total_residual_transfers ON (
    dd_base."transfers_date" = dd_transfers_total_residual_transfers."transfers_date"
    OR (
      dd_base."transfers_date" IS NULL
      AND dd_transfers_total_residual_transfers."transfers_date" IS NULL
    )
  )
ORDER BY
  "transfers_date"
LIMIT
  10"
`;
